--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mantine/form": "^7.17.5",
     "@mantine/hooks": "^7.17.5",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.74.11",
     "@tanstack/react-router": "^1.117.1",
     "@tanstack/react-router-devtools": "^1.117.1",
+    "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.3"
